--- a/teashop/resources/css/teashop.css
+++ b/teashop/resources/css/teashop.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-color: black;
+    background-color: #0b0b0b;
     color: seashell;
     opacity: 0.9;
     font-family: Helvetica, sans-serif;
@@ -34,6 +34,17 @@ address p {
     line-height: 66px;
 }
 
+a {
+    color: seashell;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.nav-item a:hover, a:hover {
+    text-decoration: none;
+    color:#cba29b;
+}
+
 /*      PAGE STRUCTURE     */
 
 #header {
@@ -46,7 +57,7 @@ address p {
     justify-content: space-between;
     align-items: center;
     border-bottom: 1px seashell solid;
-    background-color: black;
+    background-color: #0b0b0b;
 }
 
 #main-content {
@@ -120,12 +131,8 @@ nav {
     padding: 0 10px;
 }
 
-a {
-    text-decoration: underline;
-}
-
 .mission {
-    background-color: black;
+    background-color: #0b0b0b;
     width: 100%;
 }
 
@@ -153,7 +160,7 @@ a {
 
 .location {
     width: 300px;
-    background-color: black;
+    background-color: #0b0b0b;
     padding: 30px 0 5px;
     margin: 0 20px 15px;
     opacity: 1;
